implementation linking and fix marker not showing and can booking only once

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -72,7 +72,7 @@
 
 .card {
   position: fixed;
-  bottom: 70px;
+  bottom: 20px;
   right: 0;
   left: 0;
   margin-left: 15px;
